--- a/src/app/shared/pages/not-found/not-found.html
+++ b/src/app/shared/pages/not-found/not-found.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+<div class="np-container">
+    <span class="np-header">404</span>
+    <span class="np-sub-header">Oops! Page not found</span>
+</div>
