--- a/src/app/core/pages/auth-callback/auth-callback.html
+++ b/src/app/core/pages/auth-callback/auth-callback.html
@@ -1,5 +1,5 @@
 <div class="startup">
-    <img class="img" src="img/logo.png" loading="lazy" width="207" height="60" />
+    <img class="img" src="img/logo.png" loading="eager" width="207" height="60" />
     <div class="loader"></div>
     <h4>Loading... </h4>
 </div>
